# google-calendar-mcp-server

./: .gitignore  README.md  pyproject.toml
src/: main.py  server.py  settings.py
src/api/: oauth_callback.py
src/core/: calendar_client.py  mcp_tools.py  oauth_manager.py  session_manager.py
src/gcalendar_types/: get_event.py  get_instances.py  insert_calendar.py  insert_calendar_list_entry.py  insert_event.py  list_events.py  patch_event.py  quick_add_event.py  update_calendar.py  update_calendar_list_entry.py  update_event.py
